--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<h1><a href="index.html"><strong>Adaptation</strong> And biodiversity</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
+								<li><a>By Zeke Egherman</a></li>
 							</ul>
 						</nav>
 					</header>
