--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/desert.jpg" class="image"><img src="images/thumbs/desert.jpg" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Desert</h2>
+							<p>Desert text</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
