added everything else

--- a/index.html
+++ b/index.html
@@ -29,42 +29,32 @@
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h2>Desert</h2>
-							<p>Desert text</p>
+							<p>Lack of water and hot temperature causes problems for may animals. Fortunately for most, however, they have evolved to deal with the harsh climate. For example, many animals have changed their lifestyles to be nocturnal, avoiding the heat.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Grassland</h2>
-							<p>Grassland</p>
+							<p>Some adaptations for animals in grasslands are: Bison having broad, flat topped teath built for chewing grass. Many other animals also have front legs and paws that allow them to burrow into the ground to be protected from predators.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Mesa</h2>
-							<p>Mesa Text</p>
+							<p>In the mesa, animals must be able to survive during all four seasons, as seasons are a critical component to the water cycle in the mesa. In order to survive, plants have adapted to live in theese wildly different situations. For instance, trees grow many more leaves than other trees in this biome, so that during the winter (when they lose their leaves) they have more stored food and energy created from photosynthesis.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
 							<h2>Rainforest</h2>
-							<p>Rainforest text</p>
+							<p>Continuing with the adaptation of trees, the leaves of rainforest trees have adapted to cope with exceptionally high rainfall. Many tropical rainforest leaves have a <b>drip tip</b>, which allows raindrops to run off quickly. If too much water accumulates on the leaves, they will be very prone to fungus and bacteria growth.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
 							<h2>Savanna</h2>
-							<p>Savanna text</p>
+							<p>Animal adaptations in the savanna include access to water stored in trees during the dry season and increased speed to escape flames often caused by lightning striking the dry ground.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
 							<h2>Taiga</h2>
-							<p>Taiga text</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Temerate forest</h2>
-							<p>Temperate forest text</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Tundra</h2>
-							<p>Tundra text</p>
+							<p>In the taiga, many animals migrate to warmer climates once the cold weather begins. Some other animals have adapted to life in the taiga by hibernating when temperatures drop.</p>
 						</article>
 					</div>
 
